Added css first draft

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,169 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>About Me</title>
-</head>
-<body>
-    <header>
-        <h1>About Me</h1>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="experiment.html">Experiment</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <img src="#" alt="Headshot">
-        <section>
-            <h2>Personal Info</h2>
-            <ul>
-                <li>
-                    <h3>Education</h3>
-                    <p>University of California, San Diego</p>
-                    <p><i>9/2020 - 3/2024</i></p>
-                    <p>Major 1: B.S. in Math-Computer Science</p>
-                    <p>Major 2: B.S. in Data Science</p>
-                </li>
-                <li>
-                    <h3>Location</h3>
-                    <p>San Francisco, CA</p>
-                </li>
-                <li>
-                    <h3>Interests</h3>
-                    <ol>
-                        <li>Listening to music</li>
-                        <li>Watching K-dramas and Chinese dramas</li>
-                        <li>Playing video games</li>
-                        <li>Singing</li>
-                    </ol>
-                </li>
-            </ul>
+    <head>
+        <title>About Me</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link type="text/css" href="../css/styles.css" rel="stylesheet">
+        <link type="text/css" href="../css/styles-about.css" rel="stylesheet">
+    </head>
+    <body>
+        <header>
+            <h1>About Me</h1>
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="experiment.html">Experiment</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div class="intro">
+                <img src="../pics/headshot.JPG" alt="Headshot">
+                <!-- <div class="info-content">
+                <h2>Personal Info</h2>
+                <ul>
+                    <li>
+                        <h3>Education</h3>
+                        <p>University of California, San Diego</p>
+                        <p><i>9/2020 - 3/2024</i></p>
+                        <p>Major 1: B.S. in Math-Computer Science</p>
+                        <p>Major 2: B.S. in Data Science</p>
+                    </li>
+                    <li>
+                        <h3>Location</h3>
+                        <p>San Francisco, CA</p>
+                    </li>
+                    <li>
+                        <h3>Interests</h3>
+                        <ol>
+                            <li>Listening to music</li>
+                            <li>Watching K-dramas and Chinese dramas</li>
+                            <li>Playing video games</li>
+                            <li>Singing</li>
+                        </ol>
+                    </li>
+                </ul>
+            </div> -->
+                <table class="info-content">
+                    <tr>
+                        <th colspan="2"><h2>Personal Info</h2></th>
+                    </tr>
+                    <tr>
+                        <td><h3>Education</h3></td>
+                        <td>
+                            <p>University of California, San Diego</p>
+                            <p><i>9/2020 - 3/2024</i></p>
+                            <p>Major 1: B.S. in Math-Computer Science</p>
+                            <p>Major 2: B.S. in Data Science</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><h3>Location</h3></td>
+                        <td>San Francisco, CA</td>
+                    </tr>
+                    <tr>
+                        <td><h3>Interests</h3></td>
+                        <td>
+                            <ol>
+                                <li>Listening to music</li>
+                                <li>Watching K-dramas and Chinese dramas</li>
+                                <li>Playing video games</li>
+                                <li>Singing</li>
+                            </ol>
+                        </td>
+                    </tr>
+                </table>
 
-            <aside>
-                <p>Brief introduction of San Francisco</p>
-            </aside>
-        </section>
-        <hr>
-        <section>
-            <h2>Work Experience</h2>
-            <ul>
-                <li>
-                    <h3>Company 1</h3>
-                    <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
-                    <p>Description and duties, use <em><strong>Java</strong></em> and <em><strong>Python</strong></em></p>
-                </li>
-                <li>
-                    <h3>Company 2</h3>
-                    <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
-                    <p>Description and duties, use <em><strong>Java</strong></em> and <em><strong>Python</strong></em></p>
-                </li>
-                <li>
-                    <h3>Company 3</h3>
-                    <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
-                    <p>Description and duties, use <em><strong>Java</strong></em> and <em><strong>Python</strong></em></p>
-                </li>
-                <li>
-                    <h3>Company 4</h3>
-                    <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
-                    <p>Description and duties, use <em><strong>Java</strong></em> and <em><strong>Python</strong></em></p>
-                </li>
-            </ul>
-            <div class="resume">
-                <p>Click the button below to download my resume.</p>
-                <button type="button">Download Resume</button>
-                <br><br>
-                <iframe src="../documents/Xuewen_Yang_Resume.pdf" title="Resume"></iframe><br>
+                <aside>
+                    <p>San Francisco, perched on the California peninsula, is a
+                        culturally diverse and innovative city, renowned for its
+                        iconic landmarks, tech industry influence, and vibrant
+                        culture, set against a backdrop of steep hills and a
+                        moderate climate.</p>
+                </aside>
             </div>
-        </section>
-        <hr>
-        <section>
-            <h2>Skills</h2>
-            <div class="tables">
-                <table>
-                    <caption>Technical Skills</caption>
-                    <thead>
-                        <tr>
-                            <th>Skill</th>
-                            <th>Proficiency</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Python</td>
-                            <td>Advanced</td>
-                        </tr>
-                        <tr>
-                            <td>Java</td>
-                            <td>Intermediate</td>
-                        </tr>
-                        <tr>
-                            <td>SQL</td>
-                            <td>Advanced</td>
-                        </tr>
-                        <tr>
-                            <td>C</td>
-                            <td>Intermediate</td>
-                        </tr>
-                        <tr>
-                            <td>Tableau</td>
-                            <td>Advanced</td>
-                        </tr>
-                        <tr>
-                            <td>HTML</td>
-                            <td>Intermediate</td>
-                        </tr>
-                        <tr>
-                            <td>CSS</td>
-                            <td>Advanced</td>
-                        </tr>
-                        <tr>
-                            <td>JavaScript</td>
-                            <td>Intermediate</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <br>
-                <table>
-                    <caption>Speaking Languages</caption>
-                    <colgroup>
-                        <col >
-                        <col >
-                    </colgroup>
-                    <thead>
-                        <tr>
-                            <th>Language</th>
-                            <th>Proficiency</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Chinese (Mandarin) </td>
-                            <td>Native</td>
-                        </tr>
-                        <tr>
-                            <td>Chinese (Cantonese) </td>
-                            <td>Native</td>
-                        </tr>
-                        <tr>
-                            <td>English</td>
-                            <td>Professional</td>
-                        </tr>
-                        <tr>
-                            <td>Korean</td>
-                            <td>Elementary</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </section>
-    </main>
-    
-    <footer>
-        <span>&copy; 2023 Xuewen Yang</span>
-    </footer>
-</body>
+            <section class="work">
+                <div class="work-content">
+                    <h2>Work Experience</h2>
+                    <ul>
+                        <li>
+                            <h3>Company 1</h3>
+                            <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
+                            <p>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em></p>
+                        </li>
+                        <li>
+                            <h3>Company 2</h3>
+                            <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
+                            <p>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em></p>
+                        </li>
+                        <li>
+                            <h3>Company 3</h3>
+                            <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
+                            <p>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em></p>
+                        </li>
+                        <li>
+                            <h3>Company 4</h3>
+                            <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
+                            <p>Description and duties, use <em><strong>Java</strong></em>
+                                and <em><strong>Python</strong></em></p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="resume">
+                    <p>Click the button below to download my resume.</p>
+                    <iframe src="../documents/Xuewen_Yang_Resume.pdf"
+                        title="Resume"></iframe><br>
+                    <br><br>
+                    <button type="button">Download Resume</button>
+                </div>
+            </section>
+            <hr>
+            <section>
+                <h2>Skills</h2>
+                <div class="tables">
+                    <table>
+                        <caption>Technical Skills</caption>
+                        <thead>
+                            <tr>
+                                <th>Skill</th>
+                                <th>Proficiency</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Python</td>
+                                <td>Advanced</td>
+                            </tr>
+                            <tr>
+                                <td>Java</td>
+                                <td>Intermediate</td>
+                            </tr>
+                            <tr>
+                                <td>SQL</td>
+                                <td>Advanced</td>
+                            </tr>
+                            <tr>
+                                <td>C</td>
+                                <td>Intermediate</td>
+                            </tr>
+                            <tr>
+                                <td>Tableau</td>
+                                <td>Advanced</td>
+                            </tr>
+                            <tr>
+                                <td>HTML</td>
+                                <td>Intermediate</td>
+                            </tr>
+                            <tr>
+                                <td>CSS</td>
+                                <td>Advanced</td>
+                            </tr>
+                            <tr>
+                                <td>JavaScript</td>
+                                <td>Intermediate</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <br>
+                    <table>
+                        <caption>Speaking Languages</caption>
+                        <colgroup>
+                            <col>
+                            <col>
+                        </colgroup>
+                        <thead>
+                            <tr>
+                                <th>Language</th>
+                                <th>Proficiency</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Chinese (Mandarin) </td>
+                                <td>Native</td>
+                            </tr>
+                            <tr>
+                                <td>Chinese (Cantonese) </td>
+                                <td>Native</td>
+                            </tr>
+                            <tr>
+                                <td>English</td>
+                                <td>Professional</td>
+                            </tr>
+                            <tr>
+                                <td>Korean</td>
+                                <td>Elementary</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <span>&copy; 2023 Xuewen Yang</span>
+        </footer>
+    </body>
 </html>
