--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Portfolio Web page built by Xuewen Yang">
     <meta name="author" content="Xuewen Yang">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="#" rel="stylesheet">
+    <link type="text/css" href="css/styles.css" rel="stylesheet">
     <link href="#" rel="icon">
     <script src="#"></script>
 </head>
