--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <title>Contact Me</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" href="../css/styles.css" rel="stylesheet">
+    <link type="text/css" href="../css/styles-contact.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -17,41 +20,44 @@
         </nav>
     </header>
 
-    <details>
-        <summary>Contact Information</summary>
-        <p>Email: xuy001@ucsd.edu</p>
-        <p>Email: xuewenyang1@gmail.com</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/xuewen-daphne-yang/" target="_blank">LinkedIn Profile</a></p>
-        <p>GitHub: <a href="https://github.com/daphneyyy" target="_blank">GitHub Profile</a></p>
-    </details>
-    <br>
-    <form action="#">
-        <fieldset>
-            <legend><b>Contact Form</b></legend>
-            <label for="first_name">First name:</label>
-            <input type="text" id="first_name" name="first_name"><br><br>
-            <label for="last_name">Last name:</label>
-            <input type="text" id="last_name" name="last_name"><br><br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required><br><br>
-            <label for="email">You are a:</label>
-            <select id="occupation" name="occupation">
-                <optgroup label="Academic">
-                    <option value="student">student</option>
-                    <option value="prof">teacher/professor</option>
-                </optgroup>
-                <optgroup label="Non-academic">
-                    <option value="recruiter">recruiter</option>
-                </optgroup>
-                <optgroup label="Other">
-                    <option value="other">friend :)</option>
-                </optgroup>
-            </select> of <input type="text" placeholder="affiliation"><br><br>
-            <label for="message">Message:</label><br>
-            <textarea id="message" name="message" rows="5" cols="30" required></textarea><br><br>
-            <button type="submit">Submit</button>
-        </fieldset>
-    </form>
+    <main>
+        <details id="contact_info">
+            <summary>Contact Information</summary>
+            <ul>
+                <li>Email: xuy001@ucsd.edu</li>
+                <li>Email: xuewenyang1@gmail.com</li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/xuewen-daphne-yang/" target="_blank">LinkedIn Profile</a></li>
+                <li>GitHub: <a href="https://github.com/daphneyyy" target="_blank">GitHub Profile</a></li>
+            </ul>
+        </details>
+        <form action="#">
+            <fieldset id="contact_form">
+                <legend><b>Contact Form</b></legend>
+                <label for="first_name">First name:</label>
+                <input type="text" id="first_name" name="first_name"><br><br>
+                <label for="last_name">Last name:</label>
+                <input type="text" id="last_name" name="last_name"><br><br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required><br><br>
+                <label for="email">You are a:</label>
+                <select id="occupation" name="occupation">
+                    <optgroup label="Academic">
+                        <option value="student">student</option>
+                        <option value="prof">teacher/professor</option>
+                    </optgroup>
+                    <optgroup label="Non-academic">
+                        <option value="recruiter">recruiter</option>
+                    </optgroup>
+                    <optgroup label="Other">
+                        <option value="other">friend :)</option>
+                    </optgroup>
+                </select> of <input type="text" placeholder="affiliation"><br><br>
+                <label for="message">Message:</label><br>
+                <textarea id="message" name="message" rows="5" cols="30" required></textarea><br><br>
+                <button type="submit">Submit</button>
+            </fieldset>
+        </form>
+    </main>
 
     <footer>
         <span>&copy; 2023 Xuewen Yang</span>
