--- a/pages/experiment.html
+++ b/pages/experiment.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Experiment</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" href="../css/styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
