--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Projects</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" href="../css/styles.css" rel="stylesheet">
     <style>
         body {
             border: 4px solid #b8b8b8;
