added project css

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link type="text/css" href="../css/styles.css" rel="stylesheet">
-    <style>
+    <link type="text/css" href="../css/styles-projects.css" rel="stylesheet">
+    <!-- <style>
         body {
             border: 4px solid #b8b8b8;
         }
-    </style>
+    </style> -->
 </head>
 <body>
     <header>
@@ -25,32 +26,53 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h2>Project 1</h2>
-            <p>Description of Project 1</p>
+        <section class="project">
+            <div class="project-content">
+                <h2>Project 1</h2>
+                <div class="proj-description">
+                    <p>Description of Project 1</p>
+                    <p>Description of Project 1</p>
+                    <p>Description of Project 1</p>
+                    <p>Description of Project 1</p>
+                </div>
+                <a href="#" target="_blank">View Project</a>
+            </div>
             <figure>
                 <img src="#" alt="Project 1 Image">
                 <figcaption>Project 1 Image Caption</figcaption>
             </figure>
-            <a href="#" target="_blank">View Project</a>
         </section>
-        <section>
-            <h2>Project 2</h2>
-            <p>Description of Project 2</p>
+        <section class="project">
+            <div class="project-content">
+                <h2>Project 2</h2>
+                <div class="proj-description">
+                    <p>Description of Project 2</p>
+                    <p>Description of Project 2</p>
+                    <p>Description of Project 2</p>
+                    <p>Description of Project 2</p>
+                </div>
+                <a href="#" target="_blank">View Project</a>
+            </div>
             <figure>
                 <img src="#" alt="Project 2 Image">
                 <figcaption>Project 2 Image Caption</figcaption>
             </figure>
-            <a href="#" target="_blank">View Project</a>
         </section>
-        <section>
-            <h2>Project 3</h2>
-            <p>Description of Project 3</p>
+        <section class="project">
+            <div class="project-content">
+                <h2>Project 3</h2>
+                <div class="proj-description">
+                    <p>Description of Project 3</p>
+                    <p>Description of Project 3</p>
+                    <p>Description of Project 3</p>
+                    <p>Description of Project 3</p>
+                </div>
+                <a href="#" target="_blank">View Project</a>
+            </div>
             <figure>
                 <img src="#" alt="Project 3 Image">
                 <figcaption>Project 3 Image Caption</figcaption>
             </figure>
-            <a href="#" target="_blank">View Project</a>
         </section>
     </main>
     <footer>
