--- a/pages/about.html
+++ b/pages/about.html
@@ -22,7 +22,7 @@
         </header>
         <main>
             <div class="intro">
-                <img src="../pics/headshot.JPG" alt="Headshot">
+                <img src="../media/headshot.JPG" alt="Headshot">
                 <!-- <div class="info-content">
                 <h2>Personal Info</h2>
                 <ul>
