--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <br>
         <br> -->
         <section class="videos" id="video1">
-            <video controls>
-                <source src="#" type="video/mp4">
+            <video controls autoplay muted>
+                <source src="media/bowling.mov" type="video/mp4">
                 <p>Your browser doesn't support HTML5 video.</p>
             </video>
             <div class="video-description">
@@ -58,10 +58,24 @@
                 <p>some text some text some text some text some text</p>
                 <p>some text some text some text some text some text</p>
             </div>
-            <video controls>
-                <source src="#" type="video/mp4">
+            <video controls autoplay muted>
+                <source src="media/ice_skating.mov" type="video/mp4">
                 <p>Your browser doesn't support HTML5 video.</p>
             </video>
+        </section>
+        <section class="videos" id="video3">
+            <video controls autoplay muted>
+                <source src="media/archery.mov" type="video/mp4">
+                <p>Your browser doesn't support HTML5 video.</p>
+            </video>
+            <div class="video-description">
+                <p>some text some text some text some text some text</p>
+                <p>some text some text some text some text some text</p>
+                <p>some text some text some text some text some text</p>
+                <p>some text some text some text some text some text</p>
+                <p>some text some text some text some text some text</p>
+                <p>some text some text some text some text some text</p>
+            </div>
         </section>
     </main>
 
