--- a/pages/projects.html
+++ b/pages/projects.html
@@ -76,6 +76,10 @@
         </section>
     </main>
     <footer>
+        <div id="footer-logo">
+            <a href="https://www.linkedin.com/in/xuewen-daphne-yang/" target="_blank"><img src="../media/linkedin-icon.png" alt="linkedin profile"></a>
+            <a href="https://github.com/daphneyyy" target="_blank"><img src="../media/github-icon.png" alt="github profile"></a>
+        </div>
         <span>&copy; 2023 Xuewen Yang</span>
     </footer>
 </body>
