--- a/pages/contact.html
+++ b/pages/contact.html
@@ -24,12 +24,14 @@
     <main>
         <details id="contact_info">
             <summary>Contact Information</summary>
-            <ul>
+            <p>Email: xuy001@ucsd.edu</p>
+            <p>Email: xuewenyang1@gmail.com</p>
+            <!-- <ul>
                 <li>Email: xuy001@ucsd.edu</li>
                 <li>Email: xuewenyang1@gmail.com</li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/xuewen-daphne-yang/" target="_blank">LinkedIn Profile</a></li>
-                <li>GitHub: <a href="https://github.com/daphneyyy" target="_blank">GitHub Profile</a></li>
-            </ul>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/xuewen-daphne-yang/" target="_blank"><img src="../media/linkedin-icon.png" alt="linkedin profile"></a></li>
+                <li>GitHub: <a href="https://github.com/daphneyyy" target="_blank"><img src="../media/github-icon.png" alt="github profile"></a></li>
+            </ul> -->
         </details>
         <form action="#">
             <fieldset id="contact_form">
@@ -61,6 +63,10 @@
     </main>
 
     <footer>
+        <div id="footer-logo">
+            <a href="https://www.linkedin.com/in/xuewen-daphne-yang/" target="_blank"><img src="../media/linkedin-icon.png" alt="linkedin profile" width="auto" height="40px"></a>
+            <a href="https://github.com/daphneyyy" target="_blank"><img src="../media/github-icon.png" alt="github profile" width="auto" height="40px"></a>
+        </div>
         <span>&copy; 2023 Xuewen Yang</span>
     </footer>
 </body>
