--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h1>Xuewen Yang's Portfolio</h1>
+        <h1>Hello! I am Xuewen Yang &#128075;</h1>
         <h3>Welcome to my site!</h3>
         <nav>
             <ul>
@@ -36,7 +36,7 @@
         <br>
         <br> -->
         <section class="videos" id="video1">
-            <video controls autoplay muted>
+            <video controls muted>
                 <source src="media/bowling.mov" type="video/mp4">
                 <p>Your browser doesn't support HTML5 video.</p>
             </video>
@@ -58,13 +58,13 @@
                 <p>some text some text some text some text some text</p>
                 <p>some text some text some text some text some text</p>
             </div>
-            <video controls autoplay muted>
-                <source src="media/ice_skating.mov" type="video/mp4">
+            <video controls muted>
+                <source src="media/ice_skating.mov" type="video/mp4" loading="lazy">
                 <p>Your browser doesn't support HTML5 video.</p>
             </video>
         </section>
-        <section class="videos" id="video3">
-            <video controls autoplay muted>
+        <!-- <section class="videos" id="video3">
+            <video controls muted>
                 <source src="media/archery.mov" type="video/mp4">
                 <p>Your browser doesn't support HTML5 video.</p>
             </video>
@@ -76,7 +76,7 @@
                 <p>some text some text some text some text some text</p>
                 <p>some text some text some text some text some text</p>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <footer>
